--- a/0x01-git/html/html/index.html
+++ b/0x01-git/html/html/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello chip</p>
+    <p>
+        Hello chipmunk School
+    </p>
 </body>
 </html>
